Redesigned app as an EJB jar and implemented tests with GF 4.0.
Signed-off-by: Paulo Pires <pjpires@gmail.com>